fix: long name doesn't wrap (checked from 932 x 430)

--- a/my-app/src/app/pages/introduction-page/introduction-page.component.css
+++ b/my-app/src/app/pages/introduction-page/introduction-page.component.css
@@ -389,8 +389,6 @@ app-search-bar {
     }
 
     .location-name {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
+        white-space: nowrap;
+    }
 }
